Support for configurable analyses